web ui: format using prettier

--- a/ui/web/css/deps/leaflet-routing-machine.css
+++ b/ui/web/css/deps/leaflet-routing-machine.css
@@ -34,7 +34,7 @@
     transition: all 0.2s ease;
 }
 
-.leaflet-control-container .leaflet-routing-container-hide .leaflet-routing-alt, 
+.leaflet-control-container .leaflet-routing-container-hide .leaflet-routing-alt,
 .leaflet-control-container .leaflet-routing-container-hide .leaflet-routing-geocoders {
     display: none;
 }
@@ -74,7 +74,7 @@
 }
 
 .leaflet-routing-icon {
-    background-image: url('../images/leaflet.routing.icons.png');
+    background-image: url('../../images/leaflet.routing.icons.png');
     -webkit-background-size: 240px 20px;
     background-size: 240px 20px;
     background-repeat: no-repeat;
@@ -228,7 +228,7 @@
     display: block;
     width: 26px;
     height: 23px;
-    background-image: url('../images/routing-icon.png');
+    background-image: url('../../images/routing-icon.png');
 }
 
 .leaflet-routing-container-hide .leaflet-routing-collapse-btn:after {
